--- a/microwavedishes/lidlchickenmidras.html
+++ b/microwavedishes/lidlchickenmidras.html
@@ -1,5 +1,5 @@
 <pre style="text-align:center">
-<a href="./microwavedishes/pages.html">Go back to &#39;Microwave Dishes&#39;</a>
+<a href="./pages.html">Go back to &#39;Microwave Dishes&#39;</a>
 </pre>
 
 <hr />
