--- a/microwavedishes/pages.html
+++ b/microwavedishes/pages.html
@@ -1,9 +1,9 @@
 <pre style="text-align:center">
-<a href="./index.html">Go back to &#39;Homepage&#39;</a></pre>
+<a href="https://foodbylewis.github.io/index.html">Go back to &#39;Homepage&#39;</a></pre>
 
 <hr />
 <h1 style="text-align:center"><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif">Microwave Dishes</span></h1>
 
 <h3><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif">LIDL:</span></h3>
 
-<p><a href="./microwavedishes/lidlchickenmidras.html"><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif">Chef Select - Chicken Midras</span></a></p>
+<p><a href="./lidlchickenmidras.html"><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif">Chef Select - Chicken Midras</span></a></p>
