--- a/microwavedishes/lidlchickenmidras.html
+++ b/microwavedishes/lidlchickenmidras.html
@@ -5,18 +5,32 @@
 <hr />
 <h1 style="text-align:center"><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif">LIDL Chicken Midras</span></h1>
 
-<address style="text-align: center;"><span style="font-family:Tahoma,Geneva,sans-serif">By Lewis - 21/10/21 at 7:23pm</span></address>
+<h4 style="text-align:center"><span style="font-family:Tahoma,Geneva,sans-serif">By Lewis - 21/10/21 at 7:23pm</span></h4>
 
 <p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif">⭐️ ⭐️&nbsp;⭐️&nbsp;⭐️&nbsp; of five stars</span></p>
 
-<address style="text-align: center;">&nbsp;</address>
+<address>&nbsp;</address>
 
-<p style="text-align:justify"><span style="font-size:18px"><span style="font-family:Arial, Helvetica, sans-serif">The LIDL Chef Select microwave meal offers tender chicken with tomato sauce, served with pilau rice. The tomato sauce is quite spicy, as this has a &#39;Hot&#39; chilli rating. The meal serves one but can be shared as a little treat. It tastes best microwaved, as the liquid is retained better but it can also be cooked in the oven. The chicken soaks up lots of the sauce, so you can taste it throughout the dish but there isn&#39;t enough sauce for the rice included, even less if you add your own rice.</span></span></p>
+<p style="text-align:justify"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">The LIDL Chef Select microwave meal offers tender chicken with tomato sauce, served with pilau rice. The tomato sauce is quite spicy, as this has a &#39;Hot&#39; chilli rating. The meal serves one but can be shared as a little treat. It tastes best microwaved, as the liquid is retained better but it can also be cooked in the oven. The chicken soaks up lots of the sauce, so you can taste it throughout the dish but there isn&#39;t enough sauce for the rice included, even less if you add your own rice.</span></span></p>
 
-<p style="text-align:justify"><span style="font-size:18px"><span style="font-family:Arial, Helvetica, sans-serif">The chicken midras is only one of multiple dishes in LIDL&#39;s Chef Select &#39;Taste of India&#39; selection. I give it 4 out of 5 stars. It tastes great but it could really do with more sauce.</span></span></p>
+<p style="text-align:justify"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">The chicken midras is only one of multiple dishes in LIDL&#39;s Chef Select &#39;Taste of India&#39; selection. I give it 4 out of 5 stars. It tastes great but it could really do with more sauce.</span></span></p>
 
-<p style="text-align:justify">&nbsp;</p>
+<h2 style="text-align:justify"><em><span style="font-family:Arial,Helvetica,sans-serif">Pictures:</span></em></h2>
+
+<p style="text-align:justify"><img alt="Packaging" src="https://foodbylewis.github.io/microwavedishes/images/20211021_184004.jpg" style="float:left; height:240px; width:320px" /></p>
+
+<h2 style="text-align:justify">&nbsp;</h2>
+
+<h2 style="text-align:justify">&nbsp;</h2>
+
+<h2 style="text-align:justify">&nbsp;</h2>
+
+<h2 style="text-align:justify">&nbsp;</h2>
+
+<h2 style="text-align:justify">&nbsp;</h2>
+
+<h2 style="text-align:justify">&nbsp;</h2>
 
 <h2 style="text-align:justify"><em><span style="font-family:Arial,Helvetica,sans-serif">Read More:</span></em></h2>
 
-<p><span style="font-family:Arial,Helvetica,sans-serif"><a href="./microwavedishes/lidlbutterchicken.html">LIDL Butter Chicken</a></span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif"><a href="./lidlbutterchicken.html">LIDL Butter Chicken</a></span></p>
